# mlir

./: README.md
llvm/: CMakeLists.txt
mlir/: CMakeLists.txt
mlir/examples/toy/Ch5/: toyc.cpp
mlir/examples/toy/Ch6/: toyc.cpp
mlir/examples/toy/Ch7/: toyc.cpp
mlir/include/mlir/: InitAllDialects.h  InitAllPasses.h
mlir/include/mlir/Analysis/: AffineStructures.h
mlir/include/mlir/Conversion/: Passes.h  Passes.td
mlir/include/mlir/Dialect/: CMakeLists.txt
mlir/include/mlir/Elevate/: ElevateRewriter.h  algorithmic.h  core.h  traversal.h
mlir/include/mlir/Elevate2/: RewriteResult.h  core.h
mlir/include/mlir/IR/: Block.h  DialectImplementation.h  DialectSymbolRegistry.def  OpImplementation.h  Operation.h  PatternMatch.h  Region.h
mlir/include/mlir/Transforms/: ElevateRewriteDriver.h
mlir/lib/: CMakeLists.txt
mlir/lib/Analysis/: AffineStructures.cpp
mlir/lib/Conversion/: CMakeLists.txt
mlir/lib/Conversion/ElevateRewriting/: CMakeLists.txt  ElevateRewriting.cpp
mlir/lib/Conversion/PDLToPDLInterp/: PDLToPDLInterp.cpp
mlir/lib/Conversion/RiseBuilderTest/: CMakeLists.txt  RiseBuilderTest.cpp
mlir/lib/Conversion/RiseToImperative/: CMakeLists.txt  ConvertRiseToImperative.cpp
mlir/lib/Conversion/RiseToStandard/: ConvertRiseToStandard.cpp
mlir/lib/Conversion/StandardToLLVM/: StandardToLLVM.cpp
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/Dialect/Rise/: CMakeLists.txt
mlir/lib/Dialect/Rise/IR/: Attributes.cpp  CMakeLists.txt  Ops.cpp  RiseDialect.cpp  Types.cpp
mlir/lib/Dialect/Rise/Transforms/: CMakeLists.txt  Rewriting.cpp
mlir/lib/Elevate/: CMakeLists.txt  algorithmic.cpp  core.cpp  predicates.cpp  traversal.cpp
mlir/lib/ExecutionEngine/: CRunnerUtils.cpp
mlir/lib/IR/: PatternMatch.cpp
mlir/lib/Parser/: Parser.cpp
mlir/lib/Rewrite/: ByteCode.cpp  ByteCode.h
mlir/lib/Transforms/: DialectConversion.cpp
mlir/lib/Transforms/Utils/: CMakeLists.txt  ElevateRewriteDriver.cpp  GreedyPatternRewriteDriver.cpp
mlir/test/lib/Dialect/Rise/: CMakeLists.txt  rise_highlevel_test.cpp
mlir/test/mlir-opt/: commandline.mlir
mlir/tools/mlir-cuda-runner/: CMakeLists.txt
mlir/tools/mlir-opt/: CMakeLists.txt  mlir-opt.cpp
mlir/utils/jupyter/: Untitled.ipynb  Untitled2.ipynb
(+79 files in other folders)
